--- a/build.gradle
+++ b/build.gradle
@@ -27,9 +27,16 @@ dependencies {
     compile gradleApi()
     compile localGroovy()
 
+    //Add logging frameworks.
+    compile 'org.slf4j:slf4j-api:1.6.4'
+
+    logbackVersion = '1.0.0'
+    testRuntime group: 'ch.qos.logback', name:'logback-classic', version: logbackVersion
+    testRuntime group: 'ch.qos.logback', name:'logback-core', version: logbackVersion
+
     //Also add testing framework.
     testCompile gradleTestKit()
-    testCompile 'junit:junit:4.12'
+    testCompile "org.spockframework:spock-core:1.1-groovy-2.4-rc-2"
 }
 
 pluginBundle {
