--- a/build.gradle
+++ b/build.gradle
@@ -57,4 +57,8 @@ pluginBundle {
     }
 }
 
+//Some tests need to use the plugin as if it were published,
+//so also ensure test mode builds the JAR.
+test.dependsOn jar
+
 
